<resources>
    <string name="app_name">UPI Quiz</string>
    <string name="start_now">Start Now</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="range_question">1 / 10</string>
    <string name="example_question">\'\' Example Question \'\'</string>
    <string name="radiobutton_A">A</string>
    <string name="radiobutton_B">B</string>
    <string name="radiobutton_C">C</string>
    <string name="radiobutton_D">D</string>
    <string name="prev">PREV</string>
    <string name="hint">HINT</string>
    <string name="next">NEXT</string>
    <string name="finish_text">FINISH</string>
    <string name="score">Score</string>
    <string name="score_value">100</string>
    <string name="answer">Answer</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="blank">Blank</string>
    <string name="right_value">5</string>
    <string name="wrong_value">3</string>
    <string name="blank_value">2</string>
    <string name="right_text">RIGHT</string>
    <string name="wrong_text">WRONG</string>
    <string name="blank_text">BLANK</string>
    <string name="pembahasan">pembahasan</string>
</resources>
