<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:padding="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8" >

        <TextView
            android:textColor="@color/dongker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:textAlignment="center"
            android:textSize="35sp"
            android:text="@string/score"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/score"
            android:textColor="@color/dongker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="110sp"
            android:text="@string/score_value"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/right"/>

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/wrong"/>

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

        </LinearLayout>

        <View
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dongker"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/right"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/right_value"/>

            <TextView
                android:id="@+id/wrong"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/wrong_value"/>

            <TextView
                android:id="@+id/blank"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/blank_value"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_answer"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/answer"/>

</LinearLayout>