<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.88"
        android:background="@color/white">

        <TextView
            style="@style/ActionBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/action_number"
            style="@style/ActionBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:gravity="center"
            android:text="@string/range_question"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quiz_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/quiz"
            style="@style/Quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/dongker"
            android:text="@string/example_question"/>

        <ImageView
            android:id="@+id/hint1"
            style="@style/HintImg"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hint" />

        <ImageView
            android:id="@+id/hint2"
            android:layout_toLeftOf="@id/hint1"
            style="@style/HintImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hint" />

        <ImageView
            android:id="@+id/hint3"
            android:layout_toLeftOf="@id/hint2"
            style="@style/HintImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hint" />

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rdg_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingTop="8dp"
        android:paddingLeft="16dp" >

        <RadioButton
            android:id="@+id/rdb_a"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_A"/>

        <RadioButton
            android:id="@+id/rdb_b"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_B"/>

        <RadioButton
            android:id="@+id/rdb_c"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_C"/>

        <RadioButton
            android:id="@+id/rdb_d"
            style="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_D"/>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.82">

        <LinearLayout
            style="@style/Button"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/btn_prev"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:src="@drawable/back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:text="@string/prev"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_toRightOf="@id/btn_prev"
                style="@style/View"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="2dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/hint"
                    android:layout_toRightOf="@id/view1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint"
                    android:textSize="12sp"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <View
                style="@style/View"
                android:id="@+id/view2"
                android:layout_toRightOf="@id/hint"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/btn_next"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/view2"
                android:gravity="center">

                <TextView
                    android:id="@+id/btn_next_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:text="@string/next"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    android:src="@drawable/next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>